--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,7 +11,7 @@ project(${PROJECT_NAME_STR})
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 
 # Gather all sources except the main entry point
-file(GLOB_RECURSE INC_FILES src/*/*.hpp)
+file(GLOB_RECURSE INC_FILES src/*/*.h)
 file(GLOB_RECURSE SRC_FILES src/*/*.cpp)
 
 # Dependencies
