--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,10 +12,10 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 
 # Gather all sources except the main entry point
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
-file(GLOB_RECURSE INC_FILES include/*/*.h)
-file(GLOB_RECURSE INC_FILES include/*.h)
-file(GLOB_RECURSE SRC_FILES src/*/*.cpp)
-file(GLOB_RECURSE SRC_FILES src/*.cpp)
+file(GLOB_RECURSE INC_FILES include/**/*.h)
+#file(GLOB_RECURSE INC_FILES include/*.h)
+file(GLOB_RECURSE SRC_FILES src/**/*.cpp)
+#file(GLOB_RECURSE SRC_FILES src/*.cpp)
 
 # Dependencies
 list(APPEND CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/cmake/modules")
@@ -35,5 +35,6 @@ include_directories (${Boost_INCLUDE_DIRS})
 
 # Build
 set(SOURCE_FILES src/main.cpp ${INC_FILES} ${SRC_FILES})
+#set(SOURCE_FILES src/main.cpp ${SRC_FILES})
 add_executable(dev_env ${SOURCE_FILES})
 target_link_libraries(dev_env ${Boost_LIBRARIES})
