--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,7 @@ cmake_minimum_required(VERSION 3.5)
 # Definitions
 set(PROJECT_NAME_STR dev_env)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/bin")
+set(CMAKE_BUILD_TYPE Debug)
 
 # Project title and define versioning
 project(${PROJECT_NAME_STR})
