--- a/unit_test/CMakeLists.txt
+++ b/unit_test/CMakeLists.txt
@@ -8,8 +8,8 @@ set(PROJECT_UNIT_TESTS_NAME ${PROJECT_NAME_STR}_unit_tests)
 find_package(Boost COMPONENTS filesystem system unit_test_framework REQUIRED)
 
 # Gather the header and source files
-file(GLOB UNIT_TESTS_INC_FILES ${PROJECT_SOURCE_DIR}/unittest/*.hpp)
-file(GLOB UNIT_TESTS_SRC_FILES ${PROJECT_SOURCE_DIR}/unittest/*.cpp)
+file(GLOB UNIT_TESTS_INC_FILES ${PROJECT_SOURCE_DIR}/unit_test/*.hpp)
+file(GLOB UNIT_TESTS_SRC_FILES ${PROJECT_SOURCE_DIR}/unit_test/*.cpp)
 
 # Include paths
 set(UNIT_TESTS_INCLUDES ${PROJECT_INCLUDE_DIR}
@@ -27,4 +27,5 @@ add_executable(${PROJECT_UNIT_TESTS_NAME} ${UNIT_TESTS_SRC_FILES} ${SRC_FILES})
 target_link_libraries(${PROJECT_UNIT_TESTS_NAME} ${Boost_LIBRARIES})
 
 enable_testing()
+#add_test(RealTest second_test)
 add_test(DemoTest ${PROJECT_UNIT_TESTS_NAME})
