--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,7 +23,7 @@ file(GLOB_RECURSE SRC_FILES src/**/*.cpp)
 list(APPEND CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/cmake/modules")
 
  find_package(TBB REQUIRED)
- find_package(Boost COMPONENTS unit_test_framework REQUIRED)
+ find_package(Boost COMPONENTS unit_test_framework system filesystem REQUIRED)
  find_package(OpenCV REQUIRED)
  find_package(rapidjson REQUIRED)
 
