copy unit test data to binary directory

--- a/unit_test/CMakeLists.txt
+++ b/unit_test/CMakeLists.txt
@@ -30,3 +30,9 @@ target_link_libraries(${PROJECT_UNIT_TESTS_NAME} ${Boost_LIBRARIES})
 enable_testing()
 #add_test(RealTest second_test)
 add_test(UNITTEST ${PROJECT_UNIT_TESTS_NAME})
+
+# copy test data
+file(GLOB UNIT_TESTS_DATA_FILES ${PROJECT_SOURCE_DIR}/unit_test/test_json/*)
+file(COPY ${UNIT_TESTS_DATA_FILES}
+        DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/test_json)
+
