add new config rule

--- a/unit_test/CMakeLists.txt
+++ b/unit_test/CMakeLists.txt
@@ -36,3 +36,7 @@ file(GLOB UNIT_TESTS_DATA_FILES ${PROJECT_SOURCE_DIR}/unit_test/test_json/*)
 file(COPY ${UNIT_TESTS_DATA_FILES}
         DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/test_json)
 
+file(GLOB UNIT_TESTS_DYLIB ${PROJECT_SOURCE_DIR}/unit_test/test_dylib/*)
+file(COPY ${UNIT_TESTS_DYLIB}
+        DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/test_dylib)
+
