--- a/unit_test/CMakeLists.txt
+++ b/unit_test/CMakeLists.txt
@@ -1,11 +1,8 @@
-cmake_minimum_required(VERSION 3.5)
+cmake_minimum_required(VERSION 3.10)
 
 # Project settings
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ".")
 set(PROJECT_UNIT_TESTS_NAME pvpf_unit_tests)
-
-# Dependencies
-#find_package(Boost COMPONENTS filesystem system unit_test_framework REQUIRED)
 
 # Gather the header and source files
 file(GLOB UNIT_TESTS_INC_FILES ${PROJECT_SOURCE_DIR}/unit_test/*.hpp)
@@ -17,15 +14,14 @@ set(UNIT_TESTS_INCLUDES ${PROJECT_INCLUDE_DIR}
         ${Boost_INCLUDE_DIR})
 
 # Assign the include directories
-include_directories(${Boost_INCLUDE_DIRS})
 include_directories(${UNIT_TESTS_INCLUDES})
 
 # Build unit tests
 add_definitions(-DDEV_MODE)
 add_definitions(-DBOOST_TEST_DYN_LINK)
-#add_executable(${PROJECT_UNIT_TESTS_NAME} ${UNIT_TESTS_SRC_FILES} $<TARGET_OBJECTS:demo_objects> )
-add_executable(${PROJECT_UNIT_TESTS_NAME} ${UNIT_TESTS_SRC_FILES} ${SRC_FILES})
-target_link_libraries(${PROJECT_UNIT_TESTS_NAME} ${Boost_LIBRARIES})
+
+add_executable(${PROJECT_UNIT_TESTS_NAME} ${UNIT_TESTS_SRC_FILES} ${INC_FILES} ${SRC_FILES})
+target_link_libraries(${PROJECT_UNIT_TESTS_NAME} PRIVATE ${Boost_LIBRARIES} ${OpenCV_LIBS})
 
 enable_testing()
 #add_test(RealTest second_test)
@@ -40,3 +36,6 @@ file(GLOB UNIT_TESTS_DYLIB ${PROJECT_SOURCE_DIR}/unit_test/test_dylib/*)
 file(COPY ${UNIT_TESTS_DYLIB}
         DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/test_dylib)
 
+file(GLOB UNIT_TESTS_DYLIB ${PROJECT_SOURCE_DIR}/unit_test/test_images/*)
+file(COPY ${UNIT_TESTS_DYLIB}
+        DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/test_images)
