--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,16 +8,13 @@ set(CMAKE_BUILD_TYPE Debug)
 # Project title and define versioning
 project(${PROJECT_NAME_STR})
 
-#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14 ${SRC_FILES} -ltbb")
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14 --coverage ${SRC_FILES} -ltbb")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14 --coverage -ltbb")
 
 # Gather all sources except the main entry point
 
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
 file(GLOB_RECURSE INC_FILES include/**/*.h include/**/*.hpp)
-#file(GLOB_RECURSE INC_FILES include/*.h)
 file(GLOB_RECURSE SRC_FILES src/**/*.cpp)
-#file(GLOB_RECURSE SRC_FILES src/*.cpp)
 
 # Dependencies
 list(APPEND CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/cmake/modules")
@@ -34,10 +31,8 @@ add_subdirectory(system_test)
 # Assign the include directories
 include_directories (${Boost_INCLUDE_DIRS})
 
-
 # Build
 set(SOURCE_FILES src/main.cpp ${INC_FILES} ${SRC_FILES})
-#set(SOURCE_FILES src/main.cpp ${SRC_FILES})
 add_executable(point_vision_pipeline_framework ${SOURCE_FILES})
-target_link_libraries(point_vision_pipeline_framework ${Boost_LIBRARIES})
+target_link_libraries(point_vision_pipeline_framework ${Boost_LIBRARIES} ${OpenCV_LIBS})
 
