change of data_bucket

--- a/system_test/CMakeLists.txt
+++ b/system_test/CMakeLists.txt
@@ -38,3 +38,7 @@ file(COPY ${SYSTEM_TESTS_JSON_FILES}
 file(GLOB SYSTEM_TESTS_IMAGE_FILES ${PROJECT_SOURCE_DIR}/system_test/test_images/*)
 file(COPY ${SYSTEM_TESTS_IMAGE_FILES}
         DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/test_images)
+
+file(GLOB SYSTEM_TESTS_IMAGE_FILES ${PROJECT_SOURCE_DIR}/pvpf_algorithm/*)
+file(COPY ${SYSTEM_TESTS_IMAGE_FILES}
+        DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/pvpf_algorithm)
