--- a/unit_test/CMakeLists.txt
+++ b/unit_test/CMakeLists.txt
@@ -39,3 +39,7 @@ file(COPY ${UNIT_TESTS_DYLIB}
 file(GLOB UNIT_TESTS_DYLIB ${PROJECT_SOURCE_DIR}/unit_test/test_images/*)
 file(COPY ${UNIT_TESTS_DYLIB}
         DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/test_images)
+
+file(GLOB UNIT_TESTS_DYLIB ${PROJECT_SOURCE_DIR}/pvpf_algorithm/*)
+file(COPY ${UNIT_TESTS_DYLIB}
+        DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/pvpf_algorithm)
