--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,12 +24,12 @@ list(APPEND CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/cmake/modules")
  find_package(OpenCV REQUIRED)
  find_package(rapidjson REQUIRED)
 
+# Assign the include directories
+include_directories (${Boost_INCLUDE_DIRS} ${RAPIDJSON_INCLUDE_DIRS})
+
 # Unit tests
 add_subdirectory(unit_test)
 add_subdirectory(system_test)
-
-# Assign the include directories
-include_directories (${Boost_INCLUDE_DIRS})
 
 # Build
 set(SOURCE_FILES src/main.cpp ${INC_FILES} ${SRC_FILES})
