--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,7 @@ set(CMAKE_BUILD_TYPE Debug)
 # Project title and define versioning
 project(${PROJECT_NAME_STR})
 
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14 --coverage -ltbb")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14 --coverage -ltbb -lpthread")
 
 # Gather all sources except the main entry point
 
