--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,12 +3,12 @@ cmake_minimum_required(VERSION 3.10)
 # Definitions
 set(PROJECT_NAME_STR point_vision_pipeline_framework)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/bin")
-set(CMAKE_BUILD_TYPE Debug)
+set(CMAKE_BUILD_TYPE Develop)
 
 # Project title and define versioning
 project(${PROJECT_NAME_STR})
 
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14 --coverage -ltbb -lpthread")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -pthread -std=c++14 --coverage")
 
 # Gather all sources except the main entry point
 
@@ -34,5 +34,6 @@ add_subdirectory(system_test)
 # Build
 set(SOURCE_FILES src/main.cpp ${INC_FILES} ${SRC_FILES})
 add_executable(point_vision_pipeline_framework ${SOURCE_FILES})
-target_link_libraries(point_vision_pipeline_framework ${Boost_LIBRARIES} ${OpenCV_LIBS})
+target_link_libraries(point_vision_pipeline_framework ${Boost_LIBRARIES} ${OpenCV_LIBS} ${CMAKE_DL_LIBS} -ltbb -lpthread -lm)
+
 
